# emberai

./: .gitignore  .gitleaks.toml  CLAUDE.md  README.md
cisco/: .env.example  README.md  SKILL.md  pyproject.toml  run.sh  settings.json
cisco/.claude-plugin/: plugin.json
cisco/knowledge/: INDEX.md  config-persistence.md  sg300-cli-quirks.md
cisco/skills/cisco/: SKILL.md
cisco/src/cisco/: __init__.py  __main__.py  cache.py  errors.py  safety.py  server.py
cisco/src/cisco/models/: __init__.py  counters.py  interfaces.py  lldp.py  mac_table.py  system.py  validators.py  vlan.py
cisco/src/cisco/parsers/: __init__.py  interfaces.py  lldp.py  mac_table.py  system.py  vlan.py
cisco/src/cisco/snmp/: __init__.py  client.py  mappers.py  oids.py
cisco/src/cisco/ssh/: __init__.py  client.py  config_backup.py
cisco/src/cisco/tools/: __init__.py  clients.py  config.py  health.py  interfaces.py  port_write.py  topology.py  vlan_write.py
cisco/tests/: __init__.py  conftest.py  test_cache.py  test_config_backup.py  test_errors.py  test_models.py  test_parsers_interfaces.py  test_parsers_lldp.py  test_parsers_mac_table.py  test_parsers_system.py  test_parsers_vlan.py  test_safety.py  test_server.py  test_snmp_client.py  test_snmp_mappers.py  test_ssh_client.py  test_tools_clients.py  test_tools_config.py  test_tools_health.py  test_tools_interfaces.py  test_tools_port_write.py  test_tools_topology.py  test_tools_vlan_write.py
cisco/tests/fixtures/: __init__.py  show_interfaces_status.txt  show_lldp_neighbors.txt  show_lldp_neighbors_empty.txt  show_mac_address_table.txt  show_mac_address_table_empty.txt  show_running_config.txt  show_switchport_access.txt  show_switchport_trunk.txt  show_version.txt  show_vlan.txt  show_vlan_empty.txt
netex/: .env.example  .mcp.json  README.md  SKILL.md  pyproject.toml  run.sh  settings.json
netex/.claude-plugin/: plugin.json
netex/hooks/: hooks.json  setup.sh
netex/knowledge/: INDEX.md  destructive-api-patterns.md
netex/src/netex/: __init__.py  __main__.py  ask.py  cache.py  errors.py  output.py  safety.py  server.py
netex/src/netex/agents/: __init__.py  network_security_agent.py  orchestrator.py  outage_risk_agent.py
netex/src/netex/models/: __init__.py  abstract.py  manifest.py  security_finding.py
netex/src/netex/registry/: __init__.py  contract_validator.py  plugin_registry.py
netex/src/netex/tools/: __init__.py  commands.py  dns_tools.py
netex/src/netex/workflows/: __init__.py  workflow_state.py
netex/tests/: test_abstract_models.py  test_commands.py  test_contract_validator.py  test_dns_commands.py  test_dns_policy.py  test_dns_security.py  test_errors.py  test_manifest.py  test_network_security_agent.py  test_orchestrator.py  test_outage_risk_agent.py  test_plugin_registry.py  test_security_finding.py  test_server.py  test_workflow_state.py
nextdns/: .env.example  README.md  SKILL.md  pyproject.toml
nextdns/src/nextdns/: cache.py  errors.py  output.py  safety.py  server.py
nextdns/src/nextdns/agents/: analytics.py  logs.py  profiles.py  security_posture.py
nextdns/src/nextdns/api/: nextdns_client.py  url_builder.py
nextdns/src/nextdns/models/: __init__.py  analytics.py  logs.py  profile.py
nextdns/src/nextdns/tools/: _client_factory.py  _constants.py  analytics.py  commands.py  logs.py  profile_writes.py  (+2 more)
nextdns/tests/: conftest.py  test_commands.py  test_nextdns_client.py  test_tools_analytics.py  test_tools_logs.py  test_tools_profiles.py  test_write_operations.py
nextdns/tests/fixtures/: __init__.py  analytics_devices.json  analytics_domains.json  analytics_encryption.json  analytics_protocols.json  analytics_status.json  analytics_zero_queries.json  logs_search.json  profile_empty.json  profile_single.json  profiles_list.json
talos/: .env.example  .mcp.json  README.md  SKILL.md  pyproject.toml  run.sh  settings.json
talos/.claude-plugin/: plugin.json
talos/knowledge/: INDEX.md
talos/src/talos/: __init__.py  __main__.py  cache.py  errors.py  safety.py  server.py
talos/tests/: conftest.py  test_build_cluster_config.py  test_cache.py  test_cluster_setup.py  test_errors.py  test_safety.py  test_talosctl_client.py  test_tools_cluster.py  test_tools_cluster_status.py  test_tools_config.py
talos/tests/fixtures/: __init__.py  cluster_info.json  dashboard.txt  dmesg.txt  etcd_members.json  etcd_single_member.json  get_members.json  health.json  health_degraded.json  logs_machined.txt  services.json  version.json  version_unreachable.json
unifi/: .env.example  .mcp.json  README.md  SKILL.md  __init__.py  pyproject.toml  run.sh  settings.json
unifi/.claude-plugin/: plugin.json
unifi/hooks/: hooks.json  setup.sh
unifi/knowledge/: INDEX.md  switch-port-overrides.md
unifi/skills/unifi/: SKILL.md
unifi/src/: __init__.py  errors.py  safety.py  server.py
unifi/src/agents/: __init__.py
unifi/src/models/: __init__.py  _types.py  client.py  event.py
unifi/src/tools/: __init__.py
unifi/src/unifi/: __init__.py  __main__.py  ask.py  cache.py  errors.py  output.py  safety.py  server.py  validation.py
unifi/tests/: __init__.py  conftest.py  test_agents_clients.py  test_agents_diagnose.py  test_agents_health.py  test_agents_topology.py  test_api_integration.py  test_ask.py  test_cache.py  test_cached_client.py  test_cloud_topology_tools.py  test_cloud_v1_client.py  test_commands_phase2.py  test_errors.py  test_firmware_cloud_v1.py  test_local_gateway_client.py  test_m21_integration.py  test_multisite_scan.py  test_output.py  test_portprofile_commands.py  test_response.py  test_safety.py  test_server.py  test_tools_clients.py  test_tools_commands.py  test_tools_config.py  test_tools_health.py  test_tools_security.py  test_tools_topology.py  test_tools_traffic.py  test_tools_wifi.py  test_validation.py  test_write_tools.py
unifi/tests/fixtures/: __init__.py  acl_rules.json  client_list.json  device_list.json  device_single.json  event_list.json  firewall_rules.json  firmware_status.json  health.json  ids_alerts.json  port_forwards.json  sysinfo.json  vlan_config.json  zbf_policies.json
(+240 files in other folders)
