[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/netex"]

[project]
name = "netex"
version = "0.3.0"
description = "Cross-vendor network orchestration umbrella for EmberAI -- coordinates installed vendor plugins for unified topology, health, VLAN provisioning, security audits, and policy synchronization"
readme = "README.md"
license = "MIT"
requires-python = ">=3.12"
authors = [
    { name = "Bluminal Labs" },
]
keywords = [
    "netex",
    "network",
    "orchestration",
    "mcp",
    "emberai",
    "cross-vendor",
    "topology",
    "firewall",
    "vlan",
    "security",
    "audit",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: System Administrators",
    "Intended Audience :: Information Technology",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: System :: Networking",
    "Topic :: System :: Networking :: Firewalls",
    "Topic :: System :: Networking :: Monitoring",
    "Topic :: System :: Monitoring",
    "Topic :: System :: Systems Administration",
    "Topic :: Security",
    "Typing :: Typed",
    "Framework :: Pydantic :: 2",
]

dependencies = [
    "mcp>=1.26.0,<2",
    "httpx>=0.28.1,<1",
    "pydantic>=2.12.5,<3",
    "python-dotenv>=1.2.2,<2",
    "pyyaml>=6.0.2,<7",
]

[project.urls]
Homepage = "https://github.com/bluminal/emberai"
Documentation = "https://bluminal.github.io/emberai/netex/"
Repository = "https://github.com/bluminal/emberai/tree/main/netex"
Issues = "https://github.com/bluminal/emberai/issues"
Changelog = "https://github.com/bluminal/emberai/blob/main/docs/reference/changelog.md"

[project.scripts]
netex-server = "netex.server:main"

[project.entry-points."netex.plugins"]
netex = "netex.server:plugin_info"

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "coverage>=7.13.5",
    "ruff>=0.15.6",
    "mypy>=1.19.1",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "N",    # pep8-naming
    "UP",   # pyupgrade
    "B",    # flake8-bugbear
    "SIM",  # flake8-simplify
    "TCH",  # flake8-type-checking
    "RUF",  # ruff-specific rules
]

[tool.ruff.lint.isort]
known-first-party = ["netex"]

[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.coverage.run]
source = ["src/netex"]
omit = ["tests/*"]

[tool.coverage.report]
fail_under = 80
show_missing = true
